data: cron update

--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -464,7 +464,7 @@ series:
         dtstart: 2022-02-07 18:30:00+01:00
         dtend: 2022-02-07 20:00:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Feb 3, 7:00 PM CEST: Interested in UX writing? Want to hear from UX writers and designers about how they work together?
+      meta_description: 'Thu, Feb 3, 7:00 PM CET: Interested in UX writing? Want to hear from UX writers and designers about how they work together?
 
 
         Joins for beers 🍻, UX chats 💭, and more! 🔥🚀'
