--- a/data/sources/pjsdc.yaml
+++ b/data/sources/pjsdc.yaml
@@ -257,3 +257,51 @@ series:
         url: https://www.meetup.com/Prague-Junior-Software-Developer-Course/events/282564834/
         dtstart: 2021-12-21 18:00:00+01:00
         dtend: 2021-12-21 20:00:00+01:00
+  - meetupcom:
+      meta_description: 'Wed, Mar 16, 6:00 PM CET: Ještě jsi nikdy nekódoval/a? Změň to! Zúčastni se bezplatného online workshopu, kde tě zkušení mentoři provedou základy programování a seznámí tě také s low-code platformam'
+      og_title: 'Online workshop: Základy programování | Meetup'
+      url: https://www.meetup.com/Prague-Junior-Software-Developer-Course/events/284524471/
+      ical:
+        summary: 'Online workshop: Základy programování'
+        description: 'Become a software developer from 0
+
+          Wednesday, March 16 at 6:00 PM
+
+
+          Ještě jsi nikdy nekódoval/a? Změň to! Zúčastni se bezplatného online workshopu, kde tě zkušení mentoři provedou základy programování a seznámí tě také...
+
+
+          https://www.meetup.com/Prague-Junior-Software-Developer-Course/events/284524471/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_284524471@meetup.com
+        url: https://www.meetup.com/Prague-Junior-Software-Developer-Course/events/284524471/
+        dtstart: 2022-03-16 18:00:00+01:00
+        dtend: 2022-03-16 21:00:00+01:00
+  - meetupcom:
+      meta_description: 'Tue, Mar 22, 6:00 PM CET: Chceš do IT, ale nevíš, jaká specializace by ti sedla? Tápeš v tom, co je low-code, pro-code a no-code? Přemýšlíš, že bys začal/a splácet školné až po kurzu a nástupu do pr'
+      og_title: 'Online informační schůzka: Jak nastartovat kariéru v IT od nuly? | Meetup'
+      url: https://www.meetup.com/Prague-Junior-Software-Developer-Course/events/284524478/
+      ical:
+        summary: 'Online informační schůzka: Jak nastartovat kariéru v IT od nuly?'
+        description: 'Become a software developer from 0
+
+          Tuesday, March 22 at 6:00 PM
+
+
+          Chceš do IT, ale nevíš, jaká specializace by ti sedla? Tápeš v tom, co je low-code, pro-code a no-code? Přemýšlíš, že bys začal/a splácet školné až po...
+
+
+          https://www.meetup.com/Prague-Junior-Software-Developer-Course/events/284524478/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_284524478@meetup.com
+        url: https://www.meetup.com/Prague-Junior-Software-Developer-Course/events/284524478/
+        dtstart: 2022-03-22 18:00:00+01:00
+        dtend: 2022-03-22 20:00:00+01:00
