--- a/data/sources/pyvo-praha.yaml
+++ b/data/sources/pyvo-praha.yaml
@@ -2,11 +2,146 @@ series:
   id: pyvo-praha
   meetupcom:
     url: https://www.meetup.com/Pyvo-Prague-Python-Meetup/
+    meta_description: Regular Czech Python meetup in Prague, Czech Republic. Python language culture, web development, deployment, and other current topics. We meet every third Wednesday each month for more than 10 years.
+    og_title: 'Pyvo: Prague Python Meetup (Prague, Czech Republic)'
+    image: https://secure.meetupstatic.com/photos/event/8/0/c/c/600_458372972.jpeg
   events:
   - id: praha-pyvo-2021-09
     url: https://pyvo.cz/praha-pyvo/2021-09/
     date: 2021-09-15
-    title: "Pražské Pyvo #126"
+    title: 'Pražské Pyvo #126'
     venue:
       name: Holešovická šachta
       address: Bubenská 242/14
+  - meetupcom:
+      meta_description: 'Wed, Mar 16, 7:00 PM CET: **Let''s meet AFK (aka in-person) after a long time!**
+
+
+        **coPylot: Programming 2.0? –** Libor Mořkovský
+
+        GitHub Copilot is a code generator powered by OpenAI''s GPT-3 class de'
+      og_title: 'Pyvo Prague #130 | Meetup'
+      url: https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/bcxlssydcfbvb/
+      ical:
+        summary: 'Pyvo Prague #130'
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, March 16 at 7:00 PM
+
+
+          **Let''s meet AFK (aka in-person) after a long time!** **coPylot: Programming 2.0? –** Libor MořkovskýGitHub Copilot is a code generator powered by Ope...
+
+
+          https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/284113659/'
+        location: Kavárna Liberál (Heřmanova 6, Praha 7-Holešovice, Czech Republic 170 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_bcxlssydcfbvb@meetup.com
+        url: https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/284113659/
+        dtstart: 2022-03-16 19:00:00+01:00
+        dtend: 2022-03-16 23:59:00+01:00
+  - meetupcom:
+      meta_description: 'Wed, Apr 20, 7:00 PM CEST: We will meet for an informal chat about Python, programming, and more. Details will be added.'
+      og_title: 'Pyvo Prague # | Meetup'
+      url: https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/bcxlssydcgbbc/
+      ical:
+        summary: 'Pyvo Prague #'
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, April 20 at 7:00 PM
+
+
+          We will meet for an informal chat about Python, programming, and more. Details will be added.
+
+
+          https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/bcxlssydcgbbc/'
+        location: Prague (, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_bcxlssydcgbbc@meetup.com
+        url: https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/bcxlssydcgbbc/
+        dtstart: 2022-04-20 19:00:00+02:00
+        dtend: 2022-04-20 23:59:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, May 18, 7:00 PM CEST: We will meet for an informal chat about Python, programming, and more. Details will be added.'
+      og_title: 'Pyvo Prague # | Meetup'
+      url: https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/bcxlssydchbxb/
+      ical:
+        summary: 'Pyvo Prague #'
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, May 18 at 7:00 PM
+
+
+          We will meet for an informal chat about Python, programming, and more. Details will be added.
+
+
+          https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/bcxlssydchbxb/'
+        location: Prague (, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_bcxlssydchbxb@meetup.com
+        url: https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/bcxlssydchbxb/
+        dtstart: 2022-05-18 19:00:00+02:00
+        dtend: 2022-05-18 23:59:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Jun 15, 7:00 PM CEST: We will meet for an informal chat about Python, programming, and more. Details will be added.'
+      og_title: 'Pyvo Prague # | Meetup'
+      url: https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/bcxlssydcjbtb/
+      ical:
+        summary: 'Pyvo Prague #'
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, June 15 at 7:00 PM
+
+          \nWe will meet for an informal chat about Python, programming, and more. Details will be added.
+
+
+          https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/bcxlssydcjbtb/'
+        location: Prague (, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_bcxlssydcjbtb@meetup.com
+        url: https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/bcxlssydcjbtb/
+        dtstart: 2022-06-15 19:00:00+02:00
+        dtend: 2022-06-15 23:59:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Feb 16, 7:00 PM CET: https://pantheon.zoom.us/j/94879518091
+
+        password: pyvopyvo
+
+
+        The main talk will be Introduction to machine learning with TensorFlow by Adam Lechovský
+
+
+        A short and practical l'
+      og_title: 'Pyvo Prague #129 TensorFlow (online) | Meetup'
+      url: https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/wvqlpsydcdbvb/
+      ical:
+        summary: 'Pyvo Prague #129 TensorFlow (online)'
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, February 16 at 7:00 PM
+
+
+          https://pantheon.zoom.us/j/94879518091password: pyvopyvo The main talk will be Introduction to machine learning with TensorFlow by Adam Lechovský A sh...
+
+
+          https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/283742294/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_wvqlpsydcdbvb@meetup.com
+        url: https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/283742294/
+        dtstart: 2022-02-16 19:00:00+01:00
+        dtend: 2022-02-16 23:59:00+01:00
