data: cron update

--- a/data/sources/brno-java-meetup.yaml
+++ b/data/sources/brno-java-meetup.yaml
@@ -137,10 +137,10 @@ series:
 
 
         [Jakub](https://github.com/coufalja) s [Peterem](https://www.linkedin.com/in/peter-siman-31042658/?originalSubdomain=cz) pracují pro Jamf'
-      og_title: Od Javy ke Go | Meetup
+      og_title: Na cestě od Javy ke Go | Meetup
       url: https://www.meetup.com/Brno-Java-Meetup/events/284243439/
       ical:
-        summary: Od Javy ke Go
+        summary: Na cestě od Javy ke Go
         description: 'Brno Java Meetup
 
           Thursday, March 17 at 6:30 PM
