--- a/data/sources/naswp-cz.yaml
+++ b/data/sources/naswp-cz.yaml
@@ -251,3 +251,27 @@ series:
         url: https://www.meetup.com/naswp-cz/events/282169930/
         dtstart: 2022-02-26 09:15:00+01:00
         dtend: 2022-02-26 18:00:00+01:00
+  - meetupcom:
+      meta_description: 'Wed, Mar 30, 6:30 PM CEST: Netradiční WP Pivo v Hopinu bez přednášek - pojďme navázat na úspěšnost živých sekcí na WordCamp Praha 2022 a prodiskutovat to, co jsme nestihli. **Záznam nebude** \- co bu'
+      og_title: 'WordPress Pivo LIVE #9 | Meetup'
+      url: https://www.meetup.com/naswp-cz/events/284676876/
+      ical:
+        summary: 'WordPress Pivo LIVE #9'
+        description: 'NášWP WordPress komunita
+
+          Wednesday, March 30 at 6:30 PM
+
+
+          Netradiční WP Pivo v Hopinu bez přednášek - pojďme navázat na úspěšnost živých sekcí na WordCamp Praha 2022 a prodiskutovat to, co jsme nestihli. **Zá...
+
+
+          https://www.meetup.com/naswp-cz/events/284676876/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_284676876@meetup.com
+        url: https://www.meetup.com/naswp-cz/events/284676876/
+        dtstart: 2022-03-30 18:30:00+02:00
+        dtend: 2022-03-30 21:30:00+02:00
