data: cron update

--- a/data/sources/czskppug.yaml
+++ b/data/sources/czskppug.yaml
@@ -366,7 +366,7 @@ series:
 
 
           https://www.meetup.com/czskppug/events/283764636/'
-        location: Microsoft (Vyskočilova 1461/2a, Prague, Czech Republic)
+        location: Manifesto Anděl  (Ostrovskeho 34, Hlavní město Praha, Czech Republic)
         geo:
           lat: 50.08
           lon: 14.43
