--- a/data/sources/prague-devops.yaml
+++ b/data/sources/prague-devops.yaml
@@ -214,9 +214,9 @@ series:
       meta_description: 'Wed, Apr 6, 7:00 PM CEST: Hello doers,
 
 
-        The seventh online and the first this year DevOps meetup is here and we are ready to welcome all DevOps enthusiasts, from Prague or elsewhere.
+        The first hybrid and the second this year DevOps meetup is here and we are ready to welcome all DevOps enthusiasts, from Prague or elsewhere.
 
-        The structure o'
+        The structure of'
       og_title: Prague DevOps meetup online (April 2022) | Meetup
       url: https://www.meetup.com/Prague-DevOps-Meetup/events/283816829/
       ical:
@@ -226,7 +226,7 @@ series:
           Wednesday, April 6 at 7:00 PM
 
 
-          Hello doers, The seventh online and the first this year DevOps meetup is here and we are ready to welcome all DevOps enthusiasts, from Prague or elsew...
+          Hello doers, The first hybrid and the second this year DevOps meetup is here and we are ready to welcome all DevOps enthusiasts, from Prague or elsewh...
 
 
           https://www.meetup.com/Prague-DevOps-Meetup/events/283816829/'
