--- a/data/sources/the-social-programmers.yaml
+++ b/data/sources/the-social-programmers.yaml
@@ -160,3 +160,30 @@ series:
         url: https://www.meetup.com/the-social-programers/events/282255318/
         dtstart: 2021-11-25 19:00:00+01:00
         dtend: 2021-11-25 21:00:00+01:00
+  - meetupcom:
+      meta_description: 'Thu, Mar 31, 7:00 PM CEST: Coding Session
+
+
+        Let''s have a drink and code together and build something interesting. Work on your own project or join in on the group project or just get advise, grab a la'
+      og_title: Coding session V7 | Meetup
+      url: https://www.meetup.com/the-social-programers/events/284822397/
+      ical:
+        summary: Coding session V7
+        description: 'The Social Programmers
+
+          Thursday, March 31 at 7:00 PM
+
+
+          Coding Session Let''s have a drink and code together and build something interesting. Work on your own project or join in on the group project or just ...
+
+
+          https://www.meetup.com/the-social-programers/events/284822397/'
+        location: Coffice (Malířská 14, 170 00 Praha 7-Holešovice, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_284822397@meetup.com
+        url: https://www.meetup.com/the-social-programers/events/284822397/
+        dtstart: 2022-03-31 19:00:00+02:00
+        dtend: 2022-03-31 21:00:00+02:00
